istio/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-canary-istio
  labels:
    istio.io/rev: asm-1-20
