istio/appmetrics-v1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ns-canary-istio
  name: deployment-my-app-v1
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      version: v1.0.0
  template:
    metadata:
      labels:
        app: my-app
        version: v1.0.0
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
        prometheus.io/scheme: "http"
    spec:
      terminationGracePeriodSeconds: 100
      containers:
      - name: my-app
        image: crcontainerapp.azurecr.io/appmetrics:latest
        ports:
        - name: http
          containerPort: 80
        - name: probe
          containerPort: 8080
        - name: metrics
          containerPort: 9101
        livenessProbe:
          httpGet:
            path: /live
            port: probe
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /example
            port: probe
          periodSeconds: 5
        resources:
          requests:
            cpu: 5m
        lifecycle:
          preStop:
            exec:
              command: ["sleep","90"]
