istio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: ns-canary-istio
  name: svc-my-app
  labels:
    app: my-app
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: my-app
