istio/istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: ns-canary-istio
  name: istio-http-gateway
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: ns-canary-istio
  name: vs-my-app
spec:
  hosts:
    - "*"
  gateways:
    - istio-http-gateway
  http:
  - route:
    - destination:
        host: svc-my-app
        subset: ds-v1
        port:
          number: 80
      weight: 50
    - destination:
        host: svc-my-app
        subset: ds-v2
        port:
          number: 80
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: ns-canary-istio
  name: my-app
spec:
  host: '*'
  subsets:
  - name: ds-v1
    labels:
      version: v1.0.0
    trafficPolicy:
      loadBalancer:
        consistentHash:
          httpCookie:
            name: user
            ttl: 0s
  - name: ds-v2
    labels:
      version: v2.0.0
    trafficPolicy:
      loadBalancer:
        simple: LEAST_REQUEST
